(Backends) Update method 'runExternalProgram()' to use simpler Java5 classes.