@@ -129,9 +129,9 @@ public class BackendUtil {
 	 *            the list of command containing the program and its arguments
 	 */
 	public static void runExternalProgram(List<String> cmdList) {
-		String[] cmd = cmdList.toArray(new String[] {});
 		try {
-			final Process process = Runtime.getRuntime().exec(cmd);
+			ProcessBuilder builder = new ProcessBuilder(cmdList);
+			Process process = builder.start();
 			process.waitFor();
 		} catch (Exception e) {
 			OrccLogger.severeln(e.getMessage());
